[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://BulletHellSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/bullet1.png" type="Texture" id=3]
[ext_resource path="res://Images/bullet2.png" type="Texture" id=4]
[ext_resource path="res://Images/bullet3.png" type="Texture" id=5]
[ext_resource path="res://Detector.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BulletHellSpawner" parent="." instance=ExtResource( 2 )]
frames = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ]
image_change_offset = 0.1

[node name="StartTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( -510, -300 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 510, 300 )

[node name="Detector" parent="." instance=ExtResource( 6 )]
position = Vector2( -292, -129.836 )

[node name="Detector2" parent="." instance=ExtResource( 6 )]
position = Vector2( 3.99997, -105.836 )
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
